@@ -21,7 +21,6 @@ import java.util.logging.Logger;
 public class MinecraftLauncher {
   private static final Logger logger = Logger.getLogger(MinecraftLauncher.class.getName());
   private static final String LIBRARIES = "libraries";
-  private static final String ADDOPENS = "--add-opens";
   private static final File mcDir = MinecraftUtils.getMinecraftDir();
   private static final File mmcPack = new File(mcDir, "mmc-pack.json");
   private static final File PATCHES_DIR = new File(mcDir, "patches");
@@ -64,7 +63,7 @@ public class MinecraftLauncher {
     }
   }
 
-  public static ProcessBuilder launch(File javaPath, int ramGb, File gameDir, String username, String uuid, String accessToken) throws IOException {
+  public static ProcessBuilder launch(File javaPath, int ramGb, String username, String uuid, String accessToken, boolean useJava17Plus) throws IOException {
 
     List<MmcPackParser.Component> components = MmcPackParser.loadComponents(mmcPack);
     List<File> patchFiles = MmcPackParser.resolveComponentJsonFiles(PATCHES_DIR, components);
@@ -81,71 +80,93 @@ public class MinecraftLauncher {
     }
 
     List<String> jvmArgs = collectJvmArgs(allJsons);
-    jvmArgs.add("-Dfile.encoding=UTF-8");
-    jvmArgs.add("-Djava.system.class.loader=com.gtnewhorizons.retrofuturabootstrap.RfbSystemClassLoader");
-    jvmArgs.addAll(List.of(
-        ADDOPENS, "java.base/java.io=ALL-UNNAMED",
-        ADDOPENS, "java.base/java.lang=ALL-UNNAMED",
-        ADDOPENS, "java.base/java.lang.invoke=ALL-UNNAMED",
-        ADDOPENS, "java.base/java.lang.ref=ALL-UNNAMED",
-        ADDOPENS, "java.base/java.nio=ALL-UNNAMED",
-        ADDOPENS, "java.base/java.util=ALL-UNNAMED",
-        ADDOPENS, "java.base/java.util.zip=ALL-UNNAMED",
-        ADDOPENS, "java.base/jdk.internal.loader=ALL-UNNAMED"
-    ));
+
+    if (useJava17Plus) {
+      jvmArgs.add("-Dfile.encoding=UTF-8");
+      jvmArgs.add("-Djava.system.class.loader=com.gtnewhorizons.retrofuturabootstrap.RfbSystemClassLoader");
+    }
+
     String mainClass = resolveMainClass(allJsons);
     List<Library> libraries = collectLiberies(allJsons);
 
-    File lwjgl3ifyJar = new File(LIBRARIES_DIR, "lwjgl3ify-2.1.14-forgePatches.jar");
-    if (lwjgl3ifyJar.exists()) {
-      libraries.add(new Library("me.eigenraven:lwjgl3ify:2.1.14:forgePatches", null, null, 0));
-      logger.info("✅ Added lwjgl3ify-2.1.14-forgePatches.jar: " + lwjgl3ifyJar.getAbsolutePath());
-    } else {
-      logger.warning("❌ lwjgl3ify-2.1.14-forgePatches.jar not found at: " + lwjgl3ifyJar.getAbsolutePath());
+    if (useJava17Plus) {
+      String lwjgl3ifyVersion = getlwjgl3ifyVersion(useJava17Plus);
+
+      File lwjgl3ifyJar = new File(LIBRARIES_DIR, "lwjgl3ify-" + lwjgl3ifyVersion + "-forgePatches.jar");
+
+      if (lwjgl3ifyJar.exists()) {
+        libraries.add(new Library("me.eigenraven:lwjgl3ify:" + lwjgl3ifyVersion + ":forgePatches", null, null, 0));
+        logger.info("✅ Added lwjgl3ify-" + lwjgl3ifyVersion + "-forgePatches.jar: " + lwjgl3ifyJar.getAbsolutePath());
+      } else {
+        logger.warning("❌ lwjgl3ify-" + lwjgl3ifyVersion + "-forgePatches.jar not found at: " + lwjgl3ifyJar.getAbsolutePath());
+      }
     }
 
-    List<String> classpath = downloadAndBuildClasspath(libraries);
-
-    components.stream()
-        .filter(c -> c.getUid().equals("me.eigenraven.lwjgl3ify.forgepatches"))
-        .findFirst()
-        .map(comp -> MmcPackParser.resolveComponentJarFile(PATCHES_DIR, comp))
-        .ifPresentOrElse(
-            forgepatchJar -> {
-              if (forgepatchJar.exists() && !classpath.contains(forgepatchJar.getAbsolutePath())) {
-                classpath.add(0, forgepatchJar.getAbsolutePath());
-                logger.info("✅ Forgepatches added: " + forgepatchJar.getAbsolutePath());
-              } else if (!forgepatchJar.exists()) {
-                logger.warning("❌ Jar for Forgepatches was not found: " + forgepatchJar.getAbsolutePath());
-              }
-            },
-            () -> logger.warning("❌ Component forgepatches not found in mmc-pack.json")
-        );
-
+    List<String> classpath = downloadAndBuildClasspath(libraries, useJava17Plus);
 
     String minecraftVersion = components.stream()
-        .filter(c -> c.getUid().equals("net.minecraft") || c.getUid().equals("Minecraft with LWJGL3"))
+        .filter(c -> c.getUid().equals("net.minecraft") || c.getCachedName().equals("Minecraft with LWJGL3"))
         .findFirst()
-        .map(MmcPackParser.Component::getVersion)
+        .map(useJava17Plus ? MmcPackParser.Component::getCachedVersion : MmcPackParser.Component::getVersion)
         .orElse("1.7.10");
 
-    File nativesDir = new File(gameDir, "natives");
+    String forgeVersion = components.stream()
+        .filter(c -> c.getUid().equals("net.minecraftforge") || c.getCachedName().equals("Forge-LWJGL3"))
+        .findFirst()
+        .map(useJava17Plus ? MmcPackParser.Component::getCachedVersion : MmcPackParser.Component::getVersion)
+        .orElse("10.13.4.1614");
+
+    String lwjglVersion = components.stream()
+        .filter(c -> c.getUid().equals("org.lwjgl") || c.getCachedName().equals("LWJGL 3"))
+        .findFirst()
+        .map(useJava17Plus ? MmcPackParser.Component::getCachedVersion : MmcPackParser.Component::getVersion)
+        .orElse("");
+
+    String lwjglName = components.stream()
+        .filter(c -> c.getUid().equals("org.lwjgl") || c.getCachedName().equals("LWJGL 3"))
+        .findFirst()
+        .map(MmcPackParser.Component::getUid)
+        .orElse("");
+
+
+    MojangInstaller.installVersion(minecraftVersion, mcDir, (p, msg) -> System.out.println(msg + " " + (int) (p * 100) + "%"));
+    ForgeDownloader.ensureForgeAndLwjgl(LIBRARIES_DIR, minecraftVersion, forgeVersion, lwjglName, lwjglVersion);
+
+    File nativesDir = new File(MinecraftUtils.getNativePath());
+    System.out.println(nativesDir);
     NativesExtractor.extractNatives(nativesDir, libraries);
 
     jvmArgs.add("-Djava.library.path=" + nativesDir.getAbsolutePath());
 
-    String mcArgs = resolverMinecraftArgs(allJsons);
-    mcArgs = mcArgs
-        .replace("${auth_player_name}", username)
-        .replace("${auth_uuid}", uuid)
-        .replace("${auth_access_token}", accessToken)
-        .replace("${version_name}", minecraftVersion)
-        .replace("${game_directory}", gameDir.getAbsolutePath() + "/.minecraft")
-        .replace("${assets_root}", new File(gameDir, "assets").getAbsolutePath())
-        .replace("${assets_index_name}", minecraftVersion)
-        .replace("${user_properties}", "{}")
-        .replace("${user_type}", "legacy");
+    String mcArgs;
+    if (useJava17Plus) {
+      // 🔹 Аргументы для Java 17+
+      mcArgs = resolverMinecraftArgs(allJsons);
+      mcArgs = mcArgs
+          .replace("${auth_player_name}", username)
+          .replace("${auth_uuid}", uuid)
+          .replace("${auth_access_token}", accessToken)
+          .replace("${version_name}", minecraftVersion)
+          .replace("${game_directory}", MinecraftUtils.gameRoot()) // .minecraft
+          .replace("${assets_root}", new File(MinecraftUtils.getMinecraftDir(), "assets").getAbsolutePath())
+          .replace("${assets_index_name}", minecraftVersion)
+          .replace("${user_properties}", "{}")
+          .replace("${user_type}", "legacy");
+    } else {
 
+      List<String> legacyArgs = new ArrayList<>();
+      legacyArgs.add("--gameDir"); legacyArgs.add(MinecraftUtils.gameRoot());
+      legacyArgs.add("--username"); legacyArgs.add(username);
+      legacyArgs.add("--uuid"); legacyArgs.add(uuid);
+      legacyArgs.add("--accessToken"); legacyArgs.add(accessToken);
+      legacyArgs.add("--version"); legacyArgs.add(minecraftVersion);
+      legacyArgs.add("--assetsDir"); legacyArgs.add(new File(MinecraftUtils.getMinecraftDir(), "assets").getAbsolutePath());
+      legacyArgs.add("--assetIndex"); legacyArgs.add(minecraftVersion);
+      legacyArgs.add("--userProperties"); legacyArgs.add("{}");
+      legacyArgs.add("--userType"); legacyArgs.add("legacy");
+
+      mcArgs = String.join(" ", legacyArgs);
+    }
     List<String> command = new ArrayList<>();
     command.add(javaPath.getAbsolutePath());
     command.add("-Xmx" + ramGb + "G");
@@ -155,9 +176,11 @@ public class MinecraftLauncher {
     command.add(String.join(File.pathSeparator, classpath));
     command.add(mainClass);
     command.addAll(Arrays.asList(mcArgs.split(" ")));
+    command.add("--tweakClass");
+    command.add("cpw.mods.fml.common.launcher.FMLTweaker");
 
     logger.info("Test commands: " + command);
-    return new ProcessBuilder(command).directory(gameDir);
+    return new ProcessBuilder(command).directory(new File(MinecraftUtils.gameRoot()));
   }
 
   private static List<JsonObject> loadAllJson() throws IOException {
@@ -189,7 +212,7 @@ public class MinecraftLauncher {
         .filter(jsonObject -> jsonObject.has("mainClass"))
         .max(Comparator.comparingInt(o -> o.has("order") ? o.get("order").getAsInt() : 0))
         .map(obj -> obj.get("mainClass").getAsString())
-        .orElse("net.minecraft.client.main.Main");
+        .orElse("net.minecraft.launchwrapper.Launch");
   }
 
   private static String resolverMinecraftArgs(List<JsonObject> jsonObjects) {
@@ -203,8 +226,8 @@ public class MinecraftLauncher {
   private static List<Library> collectLiberies(List<JsonObject> jsonObjects) {
     List<Library> result = new ArrayList<>();
     for (JsonObject jsonObject : jsonObjects) {
-      if (jsonObject.has("libraries")) {
-        for (JsonElement element : jsonObject.getAsJsonArray("libraries")) {
+      if (jsonObject.has(LIBRARIES)) {
+        for (JsonElement element : jsonObject.getAsJsonArray(LIBRARIES)) {
           JsonObject libObj = element.getAsJsonObject();
           String name = libObj.get("name").getAsString();
 
@@ -226,8 +249,9 @@ public class MinecraftLauncher {
     return result;
   }
 
-  private static List<String> downloadAndBuildClasspath(List<Library> libraries) throws IOException {
+  private static List<String> downloadAndBuildClasspath(List<Library> libraries, boolean useJava17Plus) throws IOException {
     List<String> result = new ArrayList<>();
+
     for (Library lib : libraries) {
       File file = lib.getPath();
       if (!file.exists() && lib.hasArtifact) {
@@ -240,7 +264,98 @@ public class MinecraftLauncher {
       result.add(file.getAbsolutePath());
     }
 
+    if (useJava17Plus) {
+      String lwjgl3ifyVersion = getlwjgl3ifyVersion(useJava17Plus);
+
+      File forgePatchesJar = new File(LIBRARIES_DIR, "lwjgl3ify-" + lwjgl3ifyVersion + "-forgePatches.jar");
+      if (forgePatchesJar.exists()) {
+        result.add(forgePatchesJar.getAbsolutePath());
+      } else {
+        // Логирование ошибки или попытка скачать файл
+        System.err.println("Forge patches jar not found: " + forgePatchesJar.getAbsolutePath());
+      }
+    }
+
+    File forgeJar = new File(LIBRARIES_DIR, "net/minecraftforge/forge/" + "1.7.10-10.13.4.1614-1.7.10" + "/forge-" + "1.7.10-10.13.4.1614-1.7.10" + "-universal.jar");
+    System.out.println(forgeJar);
+    if (forgeJar.exists()) {
+      result.add(forgeJar.getAbsolutePath());
+    }
+
+    File mcJar = new File(MinecraftUtils.gameRoot(), "versions/1.7.10/1.7.10.jar");
+    System.out.println(mcJar);
+    if (mcJar.exists()) {
+      result.add(mcJar.getAbsolutePath());
+    } else {
+      System.err.println("⚠ Minecraft jar not found: " + mcJar.getAbsolutePath());
+    }
+
+//    File launchwrapper = new File(LIBRARIES_DIR, "net/minecraft/launchwrapper/1.12/launchwrapper-1.12.jar");
+//    if (!launchwrapper.exists()) {
+//      logger.info("⬇ Downloading missing launchwrapper-1.12.jar");
+//      LibraryDownloader.downloadLibrary(
+//          "net.minecraft", "launchwrapper", "1.12",
+//          LIBRARIES_DIR, null
+//      );
+//    }
+//    result.add(launchwrapper.getAbsolutePath());
+//
+//    File joptsimpleJar = new File(LIBRARIES_DIR, "net/sf/jopt-simple/jopt-simple/4.5/jopt-simple-4.5.jar");
+//    System.out.println(joptsimpleJar.getAbsolutePath());
+//    if (!joptsimpleJar.exists()) {
+//      result.add(joptsimpleJar.getAbsolutePath());
+//    } else {
+//      System.err.println("⚠ Jopt-Simple jar not found: " + joptsimpleJar.getAbsolutePath());
+//    }
+//
+//
+//    File mcJar = new File(mcDir, "versions/1.7.10/1.7.10.jar");
+//    if (mcJar.exists()) {
+//      result.add(mcJar.getAbsolutePath());
+//    } else {
+//      System.err.println("⚠ Minecraft jar not found: " + mcJar.getAbsolutePath());
+//    }
+//
+//    // ✅ Добавляем forge universal jar
+//    File forgeUniversal = new File(LIBRARIES_DIR,
+//        "net/minecraftforge/forge/1.7.10-10.13.4.1614-1.7.10/forge-1.7.10-10.13.4.1614-1.7.10-universal.jar");
+//    if (forgeUniversal.exists()) {
+//      result.add(forgeUniversal.getAbsolutePath());
+//    } else {
+//      System.err.println("⚠ Forge universal jar not found: " + forgeUniversal.getAbsolutePath());
+//    }
+
+    addAllJarsRecursive(LIBRARIES_DIR, result);
+
     return result;
+  }
+
+  private static void addAllJarsRecursive(File dir, List<String> classpath) {
+    if (dir.exists() && dir.isDirectory()) {
+      for (File file : dir.listFiles()) {
+        if (file.isDirectory()) {
+          addAllJarsRecursive(file, classpath);
+        } else if (file.isFile() && file.getName().endsWith(".jar")) {
+          String path = file.getAbsolutePath();
+
+          if (path.contains("guava-15.0.jar")) continue;
+
+          if (!classpath.contains(path)) {
+            classpath.add(path);
+          }
+        }
+      }
+    }
+  }
+
+  private static String getlwjgl3ifyVersion(boolean useJava17Plus) throws IOException {
+    List<MmcPackParser.Component> components = MmcPackParser.loadComponents(mmcPack);
+
+    return components.stream()
+        .filter(c -> c.getUid().equals("me.eigenraven.lwjgl3ify.forgepatches") || c.getUid().equals("LWJGL3ify Early Classpath"))
+        .findFirst()
+        .map(useJava17Plus ? MmcPackParser.Component::getCachedVersion : MmcPackParser.Component::getVersion)
+        .orElse("2.1.14");
   }
 
 }
